Update DupeDetector.java